cabal-version:      2.4
name:                MorseCode
version:             0.1.0.0
synopsis:            Live Morse Code 
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              edmondo@gmail.com
maintainer:          edmondo@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md

executable MorseCode
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  -- -prof -fprof-auto 
  main-is:             MorseCode.hs
  other-extensions:    DeriveFunctor, UndecidableInstances
  other-modules:      
  build-depends:       base,
                       array,
                       containers,
                       unordered-containers,
                       mtl,
                       transformers,
                       mainland-pretty,
                       scotty,
                       text,
                       wai,
                       wai-extra,
                       wai-cors,
                       haskeline,
                       aeson,
                       unordered-containers,
                       bytestring,
                       timeit,
                       uuid
  hs-source-dirs:      src
  default-language:    Haskell2010
