cabal-version:      2.4
name:                MorseCode
version:             0.1.0.0
synopsis:            Live Morse Code 
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              edmondo@gmail.com
maintainer:          edmondo@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md

executable MorseCode
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans 
  -- -prof -fprof-auto 
  main-is:             Main.hs
  other-extensions:    DeriveFunctor, UndecidableInstances, TemplateHaskell
  other-modules:       Utils, JsonUtils, MorseCodeTable, MorseCode, RedisCmd
  build-depends:       base,
                       array,
                       containers,
                       free,
                       unordered-containers,
                       mtl,
                       transformers,
                       mainland-pretty,
                       scotty,
                       text,
                       wai,
                       wai-extra,
                       wai-cors,
                       haskeline,
                       aeson,
                       unordered-containers,
                       bytestring,
                       timeit,
                       uuid,
                       hedis,
                       http-types
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans 
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Utils, JsonUtils, MorseCodeTable, MorseCode, RedisCmd, MorseCodeTests
  hs-source-dirs:      tests, src
  build-depends:       base,
                       array,
                       containers,
                       free,
                       unordered-containers,
                       mtl,
                       transformers,
                       mainland-pretty,
                       scotty,
                       text,
                       wai,
                       wai-extra,
                       wai-cors,
                       haskeline,
                       aeson,
                       unordered-containers,
                       bytestring,
                       timeit,
                       uuid,
                       hedis,
                       http-types,
                       hspec-core,
                       hspec
  default-language:    Haskell2010

